--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/express": "^1.7.0",
     "@sentry/node": "^9.30.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
