--- a/client/package.json
+++ b/client/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.32.0",
     "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
     "k-convert": "^1.0.6",
     "moment": "^2.30.1",
     "quill": "^2.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.10"
